overflow error fix

--- a/project_test/src/main/resources/static/css/search/hashtagresult.css
+++ b/project_test/src/main/resources/static/css/search/hashtagresult.css
@@ -8,8 +8,12 @@ html, body{
 	
 }
 
-body{
+html{
 	overflow-y:hidden;
+}
+
+body{
+	overflow-y:scroll;
 }
 
 
